welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:7: error: ')' expected but 'if' found.
  		if nbBiscuit==3{
                ^Poucet:7: error: '(' expected but identifier found.
  		if nbBiscuit==3{
                   ^Poucet:17: error: illegal start of simple expression
}
^